# Projeto_final_PPP

./: CMakeLists.txt  aux_func.c  aux_func.h  main.c  main2.c  structs.c  structs.h
